--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -58,10 +58,10 @@
                         </button>
                     </div>
 
-                    <div class="d-grid">
-                        <button type="button" class="btn btn-outline-secondary btn-sm" id="create-user-btn">
-                            <i class="fas fa-user-plus me-1"></i>Create Test User
-                        </button>
+                    <div class="text-center">
+                        <small class="text-muted">
+                            Use credentials: admin@sim.edu / admin123
+                        </small>
                     </div>
                 </form>
 
@@ -85,9 +85,8 @@
         sessionStorage.clear();
 
         const CONFIG = {
-            API_BASE_URL: 'http://localhost:8080/api/v1',
-            TEST_API_URL: 'http://localhost:8080/api/test',
-            BACKEND_URL: 'http://localhost:8080'
+            API_BASE_URL: window.location.origin + '/api/v1',
+            BACKEND_URL: window.location.origin
         };
 
         // DOM elements
@@ -99,7 +98,7 @@
         const alertContainer = document.getElementById('alert-container');
         const statusIndicator = document.getElementById('status-indicator');
         const backendStatus = document.getElementById('backend-status');
-        const createUserBtn = document.getElementById('create-user-btn');
+
         const debugInfo = document.getElementById('debug-info');
 
         // Update debug info
@@ -134,39 +133,13 @@
             }
         }
 
-        // Create test user
-        async function createTestUser() {
-            try {
-                updateDebug('Creating test user...');
-                showAlert('info', '⏳ Creating test user...');
 
-                const response = await fetch(`${CONFIG.TEST_API_URL}/create-admin`, {
-                    method: 'POST'
-                });
 
-                const result = await response.text();
-                updateDebug('Create user: ' + result);
-
-                if (result.includes('Error') && result.includes('constraint')) {
-                    showAlert('success', '✅ User already exists! Try logging in.');
-                } else if (result.includes('Admin user created')) {
-                    showAlert('success', '✅ Test user created! Try logging in.');
-                } else {
-                    showAlert('warning', '⚠️ Check debug info for details');
-                }
-
-            } catch (error) {
-                updateDebug('Create user error: ' + error.message);
-                showAlert('danger', '❌ Failed to create test user');
-            }
-        }
-
-        // Login function - FORCE LOGIN FOR DEVELOPMENT
+        // Login function - REAL BACKEND API ONLY
         async function login(username, password) {
             updateDebug(`Attempting login: ${username}`);
 
             try {
-                // Try normal login first
                 const response = await fetch(`${CONFIG.API_BASE_URL}/auth/login`, {
                     method: 'POST',
                     headers: {
@@ -182,27 +155,16 @@
 
                 if (response.ok) {
                     const result = await response.json();
-                    updateDebug('Normal login successful!');
+                    updateDebug('Login successful!');
                     return result;
                 }
 
-                updateDebug('Normal login failed, trying force login...');
+                // Handle error response
+                const errorData = await response.json().catch(() => ({}));
+                const errorMessage = errorData.message || `Login failed with status ${response.status}`;
 
-                // If normal login fails, use force login for development
-                const forceResponse = await fetch(`${CONFIG.TEST_API_URL}/force-login`, {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    }
-                });
-
-                if (forceResponse.ok) {
-                    const forceResult = await forceResponse.json();
-                    updateDebug('Force login successful!');
-                    return forceResult;
-                }
-
-                throw new Error('Both normal and force login failed');
+                updateDebug(`Login failed: ${errorMessage}`);
+                throw new Error(errorMessage);
 
             } catch (error) {
                 updateDebug(`Login error: ${error.message}`);
@@ -287,7 +249,7 @@
                 updateDebug(`Login failed: ${error.message}`);
 
                 if (error.message.includes('Invalid credentials')) {
-                    showAlert('danger', '❌ Invalid credentials. Try creating a test user first.');
+                    showAlert('danger', '❌ Invalid credentials. Please check your username and password.');
                 } else {
                     showAlert('danger', `❌ ${error.message}`);
                 }
@@ -296,8 +258,7 @@
             }
         });
 
-        // Create user button
-        createUserBtn.addEventListener('click', createTestUser);
+
 
         // Initialize
         document.addEventListener('DOMContentLoaded', async function () {
