--- a/src/main/webapp/dashboard-modular.html
+++ b/src/main/webapp/dashboard-modular.html
@@ -148,6 +148,9 @@
                                     <button type="button" class="btn btn-warning" onclick="showSearchStudents()">
                                         <i class="fas fa-search me-2"></i>Search Students
                                     </button>
+                                    <button type="button" class="btn btn-info" onclick="showImportStudentsExcel()">
+                                        <i class="fas fa-file-excel me-2"></i>Import Excel
+                                    </button>
                                 </div>
                             </div>
                         </div>
@@ -215,6 +218,8 @@
     <script src="js/modules/students.js"></script>
     <script src="js/modules/teachers.js"></script>
     <script src="js/modules/classes.js"></script>
+    <script src="js/modules/excel.js"></script>
+    <script src="js/modules/advanced.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
